k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
  labels:
    app: ms-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-auth
  template:
    metadata:
      labels:
        app: ms-auth
    spec:
      containers:
      - name: ms-auth
        image: ciggzy/ms-auth
        imagePullPolicy: Never

---

apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: ms-auth
  ports:
    - name: ms-auth
      protocol: TCP
      port: 8000
      targetPort: 8000
