k8s/order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-depl
  labels:
    app: ms-order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-order
  template:
    metadata:
      labels:
        app: ms-order
    spec:
      containers:
      - name: ms-order
        image: ciggzy/ms-order
        imagePullPolicy: Never

---

apiVersion: v1
kind: Service
metadata:
  name: order-srv
spec:
  selector:
    app: ms-order
  ports:
    - name: ms-order
      protocol: TCP
      port: 8002
      targetPort: 8002
