k8s/payment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-depl
  labels:
    app: ms-payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-payment
  template:
    metadata:
      labels:
        app: ms-payment
    spec:
      containers:
      - name: ms-payment
        image: ciggzy/ms-payment
        imagePullPolicy: Never

---

apiVersion: v1
kind: Service
metadata:
  name: payment-srv
spec:
  selector:
    app: ms-payment
  ports:
    - name: ms-payment
      protocol: TCP
      port: 8003
      targetPort: 8003
