k8s/redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-redis
  template:
    metadata:
      labels:
        app: ms-redis
    spec:
      containers:
      - name: ms-redis
        image: redis:7-alpine

---

apiVersion: v1
kind: Service
metadata:
  name: redis-srv
spec:
  selector:
    app: ms-redis
  ports:
    - name: ms-redis
      protocol: TCP
      port: 6379
      targetPort: 6379
